kubernetes/gateway-api/traefik/08-middleware-addprefix.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-route
  namespace: default

spec:
  parentRefs:
  - name: gateway-api
    sectionName: http
    kind: Gateway

  hostnames:
  - example-app.com

  rules:
  - matches: 
    # - type: ExtensionRef
    #   extensionRef:
    #     group: traefik.io
    #     kind: Middleware
    #     name: add-prefix
    - path:
        type: PathPrefix
        value: /api/go 
    filters:    
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    
    backendRefs:
    - name: go-svc
      port: 5000
      weight: 1
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-prefix
  namespace: default
spec:
  addPrefix:
    prefix: /status
